versions/1.20.4/translated/pt_br/players/faq.md
---
title: Perguntas frequentes dos jogadores
description: Dúvidas mais frequentes dos jogadores e administradores de servidor sobre o Fabric.

search: false
---

# Perguntas Frequentes (FAQ)

Há muitas perguntas feitas com frequência, então compilamos uma lista delas aqui.

## Perguntas Gerais

### Quais versões do Minecraft o Fabric é compatível?

Oficialmente, o Fabric é compatível com todas as versões do Minecraft começando da snapshot `18w43b` em diante, e versões da `1.14` em diante.

### Onde eu posso baixar mods publicados do Fabric?

:::info
Você deve sempre verificar se os mods são de fontes confiáveis. Visite o guia [Encontrando Mods Confiáveis](./finding-mods) para mais informações.
:::

A maioria dos autores publicam seus mods no [Modrinth](https://modrinth.com/mods?g=categories:%27fabric%27) e no [CurseForge](https://www.curseforge.com/minecraft/search?class=mc-mods&gameVersionTypeId=4), no entando, alguns preferem publicá-los em seus sites pessoais, ou em outras plataformas, como um repositório GitHub.

### Onde eu posso achar modpacks para Fabric pré-feitos?

Você pode achar modpacks para Fabric pré-feitos em várias plataformas, como:

- [Modrinth](https://modrinth.com/modpacks?g=categories:%27fabric%27)
- [CurseForge](https://www.curseforge.com/minecraft/search?class=modpacks&gameVersionTypeId=4)
- [Feed The Beast](https://www.feed-the-beast.com/ftb-app)
- [Technic](https://www.technicpack.net/modpacks)
